# CCTV_Monitoring_Diskominfo

./: README.md  api.py  backup_dashboard.html  backup_last_dash.html  dashboard-cctv.html  dashboard.html  dashboard_coba.html  database.py  main.py  main_backup.py
API_Magang/: api.py  dashboard.html  database.py  main.py
API_Magang/my_fastapi_project/: pyproject.toml
API_Magang/my_fastapi_project/app/api/endpoints/: items.py  users.py
API_Magang/my_fastapi_project/app/core/: config.py
API_Magang/my_fastapi_project/app/db/: database.py  models.py
API_Magang/my_fastapi_project/app/schemas/: item.py  user.py
API_Magang/my_fastapi_project/app/services/: vehicle_service.py
API_Magang/my_fastapi_project/tests/: test_users.py  test_vehicles.py
my_fastapi_project/: .env  README.md
my_fastapi_project/app/: main.py
my_fastapi_project/app/core/: security.py
my_fastapi_project/app/services/: user_service.py
my_fastapi_project/tests/: conftest.py
static/: style.css
templates/: CCTV.html  analisis.html  dashboard.html  home.html
